--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ nes2-dev = "nes2.api.server:dev"
 pytest = "^7.4.0"
 pytest-asyncio = "^0.21.0"
 httpx = "^0.27.0"
+black = "^24.0.0"
+isort = "^5.13.0"
+flake8 = "^7.0.0"
 
 
 [tool.poetry.group.api.dependencies]
