--- a/.github/workflows/migration-preview.yml
+++ b/.github/workflows/migration-preview.yml
@@ -4,22 +4,34 @@ on:
   pull_request:
     paths:
       - 'migrations/**'
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
 
 jobs:
   preview-migration:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
+    if: |
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Need full history to detect new migrations
-          submodules: true
+          submodules: recursive
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.12'
           cache: 'pip'
       
       - name: Install dependencies
@@ -44,6 +56,49 @@ jobs:
             echo "has_migrations=true" >> $GITHUB_OUTPUT
           fi
       
+      - name: Verify and checkout database submodule
+        if: steps.detect.outputs.has_migrations == 'true'
+        run: |
+          echo "Checking for .gitmodules file..."
+          if [ -f ".gitmodules" ]; then
+            cat .gitmodules
+          else
+            echo "Warning: .gitmodules file not found"
+          fi
+          
+          echo "Listing current directory..."
+          ls -la
+          
+          echo "Checking if nes-db exists..."
+          if [ ! -d "nes-db" ]; then
+            echo "nes-db directory does not exist, attempting to initialize submodule..."
+            git submodule init
+            git submodule update --init --recursive
+          fi
+          
+          # Check again after initialization
+          if [ ! -d "nes-db" ]; then
+            echo "Error: nes-db directory still does not exist after initialization"
+            echo "The submodule might not be committed in this branch"
+            exit 1
+          fi
+          
+          # Check if submodule is empty
+          if [ -z "$(ls -A nes-db)" ]; then
+            echo "Submodule directory exists but is empty, attempting to update..."
+            git submodule update --init --recursive --force
+          fi
+          
+          # Verify it's not empty after initialization
+          if [ -z "$(ls -A nes-db)" ]; then
+            echo "Error: nes-db directory is still empty after initialization"
+            echo "This might be a permissions issue with the submodule repository"
+            exit 1
+          fi
+          
+          echo "✓ Database submodule is present and not empty"
+          ls -la nes-db
+      
       - name: Validate migrations
         if: steps.detect.outputs.has_migrations == 'true'
         run: |
@@ -65,7 +120,7 @@ jobs:
         if: steps.detect.outputs.has_migrations == 'true'
         id: execute
         run: |
-          # Initialize temporary database for preview
+          # Use the database submodule
           export NES_DB_PATH=./nes-db
           
           # Create output file for statistics
