--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "nes-db"]
 	path = nes-db
-	url = git@github.com:NewNepal-org/NepalEntityService-database.git
+	url = https://github.com/NewNepal-org/NepalEntityService-database.git
