--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       run: poetry install --no-interaction --extras "all"
     
     - name: Check formatting
-      run: ./scripts/check-format.sh
+      run: ./scripts/format.sh --check
     
     - name: Run tests
       run: poetry run pytest
